Change content on all pages

--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -100,13 +100,15 @@
         <div class="row px-2 py-5">
             <div class="col-lg-8">
                 <h2>Image of The Day</h2>
-                <img src="https://www.nasa.gov/sites/default/files/thumbnails/image/51982058640_3306aa1585_o.jpeg" alt="" class="img-fluid">
+                <a href="https://www.nasa.gov/image-feature/space-launch-system-rocket-at-dawn">
+                    <img src="https://www.nasa.gov/sites/default/files/thumbnails/image/51982058640_3306aa1585_o.jpeg" alt="" class="img-fluid">
+                </a>
             </div>
             <div class="col-lg-4 pb-5">
                 <div style="position: relative; top: 35%;">
                     <h2>Space Launch System Rocket at Dawn</h2>
                     <p>NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard is seen at sunrise atop a mobile launcher at Launch Complex 39B, Monday, April 4, 2022.</p>
-                    <button class="btn btn-primary btn-rounded">View Image Feature</button>
+                    <button class="btn btn-primary btn-rounded" onclick="location.href='https\://www.nasa.gov/image-feature/space-launch-system-rocket-at-dawn'" type="button">View Image Feature</button>
                 </div>
             </div>
         </div>
@@ -117,38 +119,39 @@
                 <div class="col-lg-4 ">
                     <a href="https://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal" class="card">
                         <div class="uni-header">
-                            <h3 class="card-title">Prepping for Wet Dress Rehearsal</h3>
+                            <h3 class="card-title">NASA News</h3>
                         </div>
-                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/nasa_sls_artemis_i_horizontal.jpg" alt="" class="img-fluid">
-                        <div class="card-body">
-                            <p>Engineers and technicians are continuing to prepare for the Artemis I wet dress rehearsal test which is slated to begin on April 1 and conclude on April 3.</p>
-                            <button class="btn btn-primary btn-rounded">View NASA Images</button>
-                        </div>
+                        <img src="../img/image-gallery-1.png" alt="" class="img-fluid">
                     </a>
+                        <div class="card-body">
+                            <p>Official NASA photographs from agency photographers chronicle what's making news across the agency, from launches and landings to important science announcements.</p>
+                            <button class="btn btn-primary btn-rounded" onclick="location.href='https\://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal'" type="button">View NASA Images</button>
+                        </div>
                 </div>
                 <div class="col-lg-4">
-                    <a href="https://www.nasa.gov/image-feature/pilot-bob-hines-in-training-for-crew-4" class="card">
+                    <a href="http://images.nasa.gov/" class="card">
                         <div class="uni-header">
-                            <h3 class="card-title">Pilot Bob Hines in Training for Crew-4</h3>
+                            <h3 class="card-title">NASA Image Library</h3>
                         </div>
-                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jsc2022e011412.jpg" alt="" class="img-fluid">
+                        <img src="../img/image-gallery-2.png" alt="" class="img-fluid">
+                    </a>
                         <div class="card-body">                            
-                            <p>NASA astronaut and SpaceX Crew-4 pilot Bob Hines is pictured during a training session inside a mockup of the Crew Dragon vehicle at SpaceX Headquarters.</p>
-                            <button class="btn btn-primary btn-rounded">View NASA Images</button>
+                            <p>NASA's image library, <a href="images.nasa.gov">images.nasa.gov</a>, consolidates imagery and videos in one searchable locations. Users can download content in multiple sizes and resolutions and see the metadata associated with images, including EXIF/camera data on many images. </p>
+                            <button class="btn btn-primary btn-rounded" onclick="location.href='http\://images.nasa.gov/'" type="button">View NASA Images</button>
                         </div>
-                    </a>
                 </div>
                 <div class="col-lg-4">
-                    <a href="https://www.nasa.gov/image-feature/mark-vande-hei-and-crew-mates-safely-land" class="card">
+                    <a href="https://www.nasa.gov/missions" class="card">
                         <div class="uni-header">
-                            <h3 class="card-title">Mark Vande Hei and Crew Mates Safely Land</h3>
+                            <h3 class="card-title">Mission Galleries</h3>
                         </div>
-                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/51970937381_9d3d2e370a_o.jpg" alt="" class="img-fluid">
-                        <div class="card-body">
-                            <p>NASA astronaut Mark Vande Hei, left, and cosmonauts Anton Shkaplerov, center, and Pyotr Dubrov are seen inside their Soyuz MS-19 spacecraft after landing.</p>
-                            <button class="btn btn-primary btn-rounded">View Galleries</button>
-                        </div>
+                        <img src="../img/image-gallery-3.png" alt="" class="img-fluid">
                     </a>
+                    
+                        <div class="card-body">
+                            <p>View images from our missions exploring the universe and our home planet. For a list of all missions, visit <a href="https://www.nasa.gov/missions">the missions A-Z page.</a></p>
+                            <button class="btn btn-primary btn-rounded" onclick="location.href='https\://www.nasa.gov/missions'" type="button">View Galleries</button>
+                        </div>
                 </div>
             </div>
         </div>
