--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
         <!-- Masthead -->
         <div class="row px-2 pb-5">
             <div class="col img-banner-container">
-                <h1 class="img-banner-title">Image Gallery</h1>
+                <h1 class="img-banner-title">About</h1>
                 <img src="img/about-0.png" alt="">
             </div>
         </div>
@@ -112,7 +112,7 @@
         <div class="row px-4 py-5">
             <div class="jumbotron row w-100 ml-auto mr-auto">
                <div class="col-lg-3">
-                   <a href="#">
+                   <a href="https://www.nasa.gov/feature/nasa-looks-ahead-in-2022-artemis-x-59-lunar-exploration-and-more">
                        <div class="captioned-img">
                             <img src="img/about-1.jpg" alt="" class="img-fluid">
                             <p class="img-caption"><span>NASA 2022</span></p>
@@ -120,7 +120,7 @@
                    </a>
                </div>
                <div class="col-lg-3">
-                    <a href="#">
+                    <a href="https://www.youtube.com/watch?v=el7RFWBlFDU">
                         <div class="captioned-img">
                             <img src="img/about-2.jpg" alt="" class="img-fluid">
                             <p class="img-caption"><span>Video: NASA 2022</span></p>
@@ -128,7 +128,7 @@
                     </a>
                </div>
                <div class="col-lg-3">
-                    <a href="#">
+                    <a href="https://www.nasa.gov/careers">
                         <div class="captioned-img">
                             <img src="img/about-3.jpg" alt="" class="img-fluid">
                             <p class="img-caption"><span>Careers @NASA</span></p>
@@ -136,7 +136,7 @@
                     </a>
                </div>
                <div class="col-lg-3">
-                    <a href="#">
+                    <a href="https://www.nasa.gov/about/org_index.html">
                         <div class="captioned-img">
                             <img src="img/about-4.jpg" alt="" class="img-fluid">
                             <p class="img-caption"><span>Officials and Organizations</span></p>
@@ -158,8 +158,8 @@
                 </div>
                 <div class="row pt-4 uni-footer">
                     <div class="col">
-                        <button class="btn btn-primary btn-rounded m-1">View Map</button>
-                        <button class="btn btn-primary btn-rounded m-1">Visit NASA</button>
+                        <button class="btn btn-primary btn-rounded m-1" onclick="location.href='https\://www.nasa.gov/about/sites/index.html'" type="button">View Map</button>
+                        <button class="btn btn-primary btn-rounded m-1" onclick="location.href='https\://www.nasa.gov/about/sites/index.html'" type="button">Visit NASA</button>
                     </div>
                 </div>
             </div>
@@ -172,8 +172,8 @@
                 </div>
                 <div class="row pt-4 uni-footer">
                     <div class="col">
-                        <button class="btn btn-primary btn-rounded m-1">Programs</button>
-                        <button class="btn btn-primary btn-rounded m-1">Paperwork</button>
+                        <button class="btn btn-primary btn-rounded m-1" onclick="location.href='https\://osbp.nasa.gov/index.html'" type="button">Programs</button>
+                        <button class="btn btn-primary btn-rounded m-1" onclick="location.href='mailto:truphelia.m.parker@nasa.gov'" type="button">Paperwork</button>
                     </div>
                 </div>
             </div>
@@ -188,7 +188,7 @@
                 </div>
                 <div class="row pt-4 uni-footer">
                     <div class="col-12">
-                        <button class="btn btn-primary btn-rounded m-1">Submit Question</button>
+                        <button class="btn btn-primary btn-rounded m-1" onclick="location.href='https\://www.nasa.gov/content/submit-a-question-for-nasa'" type="button">Submit Question</button>
                     </div>
                 </div>
             </div>
