--- a/Topics/earth.html
+++ b/Topics/earth.html
@@ -101,7 +101,10 @@
             <div class="col">
                 <p><strong>Your Planet Is Changing. We're On It.</strong></p>
                 <p>NASA uses the vantage point of space to increase our understanding of our home planet, improve lives, and safeguard our future.</p>
-                <button class="btn btn-primary btn-rounded mx-2">OVERVIEW</button><button class="btn btn-primary btn-rounded mx-2">IMAGES</button><button class="btn btn-primary btn-rounded mx-2">VIDEOS</button><button class="btn btn-primary btn-rounded mx-2">MEDIA RESOURCES</button>
+                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/earth/overview/index.html'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/earth/images/index.html'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/earth/videos/index.html'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mx-2"onclick="location.href='https\://www.nasa.gov/topics/earth/news/index.html'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
 
@@ -112,63 +115,62 @@
             </div>
             <div class="card-deck">
                 <div class="col-lg-4">
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="../img/home-8.jpg">
+                    <a href="../article.html" class="card">
+                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/insta_mockup.png">
                         <div class="card-body">
-                            <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
-                            <h5 class="card-title">Artemis I in Moonlight</h5>
-                            <p class="card-text">Earth's Moon is seen rising behind NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard atop a mobile launcher as it rolls out to Launch Complex 39B for the first time, Thursday, March 17, 2022, at NASA’s Kennedy Space Center in Florida.</p>
+                            <p class="article-subtitle">Earth<i>Apr 08, 22</i></p>
+                            <h5 class="card-title">Connect with NASA on Social Media this Earth Day</h5>
+                            <p class="card-text">Life on Earth is chaotic and complex, and endlessly beautiful.</p>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4">                
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="../img/home-9.jpg">
+                    <a href="../article.html" class="card">
+                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/pia25185.jpeg">
                         <div class="card-body">
-                            <p class="article-subtitle">Equinox<i>Mar 18, 2022</i></p>
-                            <h5 class="card-title">March Equinox Welcomes ‘Astronomical’ Spring</h5>
-                            <p class="card-text">Did you know our planet has two types of seasons? They are meteorological and astronomical. What’s the difference?</p>
+                            <p class="article-subtitle">Image of the Day<i>Apr 07, 2022</i></p>
+                            <h5 class="card-title">Japan's Geiyo Archipelago</h5>
+                            <p class="card-text">Japan's Geiyo Archipelago, in the Seito Inland Sea, was once home to pirates. From the 9th to the 16th centuries, the pirates dominated the Inland Sea and terrorized the coasts of East Asia</p>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4">    
-                
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="../img/home-10.jpg">
+                    <a href="../article.html" class="card">
+                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/51982552683_915c5cb164_k.jpg?itok=uefIs8G-">
                         <div class="card-body">
-                            <p class="article-subtitle">Spacewalk<i>Mar 16, 2022</i></p>
-                            <h5 class="card-title">NASA Astronauts Complete Spacewalk for Solar Array Work</h5>
-                            <p class="card-text">NASA astronauts Kayla Barron and Raja Chari concluded their spacewalk at 3:06 p.m. EDT after 6 hours and 54 minutes in preparation for upcoming solar array installation.</p>
+                            <p class="article-subtitle">Climate<i>Apr 06, 2022</i></p>
+                            <h5 class="card-title">NASA, Australian Space Agency Collaborate on Earth Science</h5>
+                            <p class="card-text">NASA and the Australian Space Agency are continuing their 60-year successful partnership to study Earth's changing climate.</p>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4">    
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="../img/home-11.jpg">
+                    <a href="../article.html" class="card">
+                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/1-groundwater-final-16_0.jpg?itok=IyFS78Uu">
                         <div class="card-body">
-                            <p class="article-subtitle">Webb Telescope<i>Mar 14, 2022</i></p>
-                            <h3 class="card-title">NASA to Discuss Progress as Webb Telescope’s Mirrors Align</h>
-                            <p class="card-text">NASA will hold a virtual media briefing at noon EDT Wednesday, March 16, to provide an update on the James Webb Space Telescope’s mirror alignment. The briefing will air live on NASA TV, the NASA app, and the agency’s website.</p>
+                            <p class="article-subtitle">Water<i>Apr 05, 2022</i></p>
+                            <h5 class="card-title">NASA Finds New Way to Monitor Underground Water Loss</h5>
+                            <p class="card-text">Scientists have produced a new method that holds the promise of improving groundwater management – critical to both life and agriculture in dry regions</p>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4">    
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="../img/home-12.jpg">
+                    <a href="../article.html" class="card">
+                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/forest_image_usgs.jpg">
                         <div class="card-body">
-                            <p class="article-subtitle">Expedition 66<i>Mar 13, 2022</i></p>
-                            <h5 class="card-title">NASA to Air Briefing, Spacewalks to Upgrade Space Station</h5>
-                            <p class="card-text">Crew members from International Space Station Expedition 66 will conduct two spacewalks Tuesday, March 15, and Wednesday, March 23, to continue upgrades to the orbiting laboratory.</p>
+                            <p class="article-subtitle">Climate<i>Apr 05, 2022</i></p>
+                            <h5 class="card-title">NASA Releases Breakthrough Forest Biomass-Carbon Product</h5>
+                            <p class="card-text">NASA’s GEDI mission has reached a major milestone with the release of its newest data product, which provides the first near-global estimate of aboveground forest biomass and the carbon it stores – filling a key gap in climate research.</p>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4">    
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="../img/home-13.jpg">
+                    <a href="../article.html" class="card">
+                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/airlusi1b.jpg">
                         <div class="card-body">
-                            <p class="article-subtitle">Space Station Research<i>Mar 9, 2022</i></p>
-                            <h5 class="card-title">Three Space Station Studies Helping Scientists Understand the Early Universe</h5>
-                            <p class="card-text">Research conducted aboard the International Space Station is helping scientists answer questions about the formation of the universe and origins of life on Earth.</p>
+                            <p class="article-subtitle">NASA Armstrong<i>Apr 04, 2022</i></p>
+                            <h5 class="card-title">NASA Uses Moonlight to Improve Satellite Accuracy</h5>
+                            <p class="card-text">NASA’s airborne Lunar Spectral Irradiance, or air-LUSI, flew aboard NASA’s ER-2 aircraft from March 12 to 16 to accurately measure the amount of light reflected off the Moon.</p>
                         </div>
                     </a>
                 </div>
