Several CSS Updates
- Fix Footer margin
- Fix Jumbotron subtitles position on mobile
- Fix title and links hover color
- Fix About image sizing on mobile
- Change Mission Update images

--- a/Topics/humans-in-space.html
+++ b/Topics/humans-in-space.html
@@ -212,7 +212,9 @@
             </div>
         </div>
         <div class="w-100">
-            <a href="https://github.com/mikojimnz/DIG4172C" target="_blank"><p class="text-center text-white">Developed by DIG4172C Group 3. All Rights Reserved.</p></a>
+            <a href="https://github.com/mikojimnz/DIG4172C" target="_blank">
+                <p class="text-center text-white p-3 m-0">Developed by DIG4172C Group 3. All Rights Reserved.</p>
+            </a>
         </div>
     </footer>
   
