--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <h2 class="article-recent-title">Hubble Sees the Eye of a Colorful Galaxy</h2>
                     <img class="img-fluid article-img-lg" src="img/home-1.png" width="100%">
                 </a>
-                <p class="article-recent-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust seen in a dark red hue...</p>
+                <p class="article-recent-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust seen in a dark red hue...<a href="article.html" class="article-more"><strong class="hover">read more</strong></a></p>
                 </div>
             
             <!-- Latest Articles -->
@@ -171,7 +171,7 @@
                             <h1 class="jumbotron-title">Upcoming Launch</h1>
                         </div>
                         <div class="col-lg-6">
-                            <p class="jumbotron-subtitle float-right">View All Launches and Landings</p>
+                            <p class="jumbotron-subtitle float-lg-right">View All Launches and Landings</p>
                         </div>
                     </div>
                     <hr class="jumbotron-hr mt-0 mb-4">
@@ -180,7 +180,7 @@
                             <img class="article-img" src="img/home-7.png" alt="">
                         </div>
                         <div class="col-lg-9">
-                            <h2 class="mb-3">NASA's SpaceX Crew-4 Mission to the International Space Station</h2>
+                            <h2 class="mb-3 hover">NASA's SpaceX Crew-4 Mission to the International Space Station</h2>
                             <h5 class="jumbotron-date mb-3">Date: No earlier than April 21, 2022</h5>
                             <p class="jumbotron-desc">Missions teams are targeting no earlier than April 21, 2022, for the launch of NASA’s SpaceX Crew-4 mission to the space station for a six-month science mission aboard the microgravity laboratory.</p>
                         </div>
@@ -296,7 +296,9 @@
             </div>
         </div>
         <div class="w-100 mb-0">
-            <a href="https://github.com/mikojimnz/DIG4172C" target="_blank"><p class="text-center text-white p-3">Developed by DIG4172C Group 3. All Rights Reserved.</p></a>
+            <a href="https://github.com/mikojimnz/DIG4172C" target="_blank">
+                <p class="text-center text-white p-3 m-0">Developed by DIG4172C Group 3. All Rights Reserved.</p>
+            </a>
         </div>
     </footer>
   
