--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
         <!-- Masthead -->
         <div class="row px-2 pb-5">
             <div class="col img-banner-container">
-                <h1 class="img-banner-title">About</h1>
+                <h1 class="img-banner-title">About NASA</h1>
                 <img src="img/about-0.png" alt="">
             </div>
         </div>
@@ -114,7 +114,7 @@
                <div class="col-lg-3">
                    <a href="https://www.nasa.gov/feature/nasa-looks-ahead-in-2022-artemis-x-59-lunar-exploration-and-more">
                        <div class="captioned-img">
-                            <img src="img/about-1.jpg" alt="" class="img-fluid">
+                            <img src="img/about-1.jpg" alt="" class="img-fluid w-100">
                             <p class="img-caption"><span>NASA 2022</span></p>
                        </div>
                    </a>
@@ -122,7 +122,7 @@
                <div class="col-lg-3">
                     <a href="https://www.youtube.com/watch?v=el7RFWBlFDU">
                         <div class="captioned-img">
-                            <img src="img/about-2.jpg" alt="" class="img-fluid">
+                            <img src="img/about-2.jpg" alt="" class="img-fluid w-100">
                             <p class="img-caption"><span>Video: NASA 2022</span></p>
                         </div>
                     </a>
@@ -130,7 +130,7 @@
                <div class="col-lg-3">
                     <a href="https://www.nasa.gov/careers">
                         <div class="captioned-img">
-                            <img src="img/about-3.jpg" alt="" class="img-fluid">
+                            <img src="img/about-3.jpg" alt="" class="img-fluid w-100">
                             <p class="img-caption"><span>Careers @NASA</span></p>
                         </div>
                     </a>
@@ -138,7 +138,7 @@
                <div class="col-lg-3">
                     <a href="https://www.nasa.gov/about/org_index.html">
                         <div class="captioned-img">
-                            <img src="img/about-4.jpg" alt="" class="img-fluid">
+                            <img src="img/about-4.jpg" alt="" class="img-fluid w-100">
                             <p class="img-caption"><span>Officials and Organizations</span></p>
                         </div>
                     </a>
@@ -230,7 +230,9 @@
             </div>
         </div>
         <div class="w-100">
-            <a href="https://github.com/mikojimnz/DIG4172C" target="_blank"><p class="text-center text-white">Developed by DIG4172C Group 3. All Rights Reserved.</p></a>
+            <a href="https://github.com/mikojimnz/DIG4172C" target="_blank">
+                <p class="text-center text-white p-3 m-0">Developed by DIG4172C Group 3. All Rights Reserved.</p>
+            </a>
         </div>
     </footer>
   
